modify error of login for the admin session

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -73,8 +73,8 @@
                     <div class="space-y-2 mb-4">
                       <p class="text-sm text-gray-600">
                         <span class="font-medium">Demandé par:</span> 
-                        <%= request.user.fName %> <%= request.user.lName %> 
-                        <span class="text-gray-400">(<%= request.user.email %>)</span>
+                        <%= request.User.fName %> <%= request.User.lName %> 
+                        <span class="text-gray-400">(<%= request.User.email %>)</span>
                       </p>
                       <p class="text-sm text-gray-600">
                         <span class="font-medium">Raison:</span> <%= request.reason %>
